# thesis

./: .gitignore  .projectile  LICENSE  inbox.org  latexmkrc  makefile  pkuthss-utf8.def  pkuthss.cls  pkuthss.def  thesis.bib  thesis.docx  thesis.tex
chap/: abs.tex  ack.tex  chap1.tex  chap2.tex  chap3.tex  chap4.tex  chap5.tex  chap6.tex  desc_table.tex  logit_table.tex  robust_table.tex  score.tex  variable_table.tex
doc/: reference.docx
inbox/: inbox.org
notes/: theses.org  thesis_archive.org  债券市场历史违约汇总.org
notes/thesis/: 2020Do.org  2020Fiscal.org  abinzano2020performance.org  anginer2018corporate.org  audrino2019predicting.org  azizpour2018exploring.org  badoer2019relevance.org  bai2019common.org  bai2020credit.org  bali2021macroeconomic.org  blochlinger2018ratings.org  bonaccolto2021breakup.org  brogaard2017stock.org  calomiris2019news.org  chen2018quantifying.org  chung2019volatility.org  colacito2020business.org  cortes2021financial.org  ding2021corporate.org  feldhutter2018myth.org  golbayani2020comparative.org  kellner2022opening.org  mirza2020impact.org  mo2021china.org  nagel2020banks.org  nickerson2017debt.org  sigrist2019grabit.org  subrahmanyam2017credit.org  test.py  traczynski2017firm.org  何青2018中国系统性金融风险的度量——基于实体经济的视角.org  史永东2021中债估值识别了债券信用风险吗.org  吴育辉2020.org  寇宗来2015中国的信用评级真的影响发债成本吗.org  寇宗来2021私有信息.org  常莹莹2019环境信息透明度与企业信用评级.org  徐光2019定向支持政策能缓解民营企业的融资约束吗.org  杨国超2019信任被定价了吗.org  林晚发2018高管任职经历的得与失.org  梅冬州2021财政扩张.org  (+19 more)
src/: clean.py  config.ini  create_logreg.py  logit_reg.py  ml.py  pyproject.toml
