[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Ernest DONG <dongcy2000@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
statsmodels = "^0.13.2"
SQLAlchemy = "^1.4.31"
PyMySQL = "^1.0.2"
scikit-learn = "^1.0.2"
graphviz = "^0.19.1"
seaborn = "^0.11.2"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
ipykernel = "^6.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.pyright]
useLibraryCodeForTypes=true
